# cfa-mrp

./: .gitignore  .rumdl.toml  Cargo.toml  README.md  plz.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: environment-api.md  model-authors.md
examples/: orchestrator.py  renewal.mrp.toml  renewal_rs.mrp.toml  run_experiments.py
examples/randomn/: pyproject.toml
examples/randomn/src/randomn/: __main__.py  model.py
examples/renewal/: __init__.py  mrp.toml  mrp.with_profiles.toml  output.py  parameters.json  parameters.py  pyproject.toml  renewal.py
examples/renewal-rs/: Cargo.toml  mrp.toml
examples/renewal-rs/src/: main.rs  output.rs  parameters.rs  renewal.rs
examples/renewal/experiments/: default.toml  high.json  high.toml  low.json  low.toml
examples/renewal/src/renewal/: model.py  parameters.py
mrp-rs/: Cargo.toml
mrp-rs/src/: api.rs  config.rs  csv.rs  environment.rs  lib.rs  manifest.rs  orchestrator.rs  runtime.rs  stager.rs
output/default/run_0000/: renewal_output.csv
output/default/run_0001/: renewal_output.csv
output/high/: renewal_output.csv
output/high/run_0000/: renewal_output.csv
output/high/run_0001/: renewal_output.csv
output/low/run_0000/: renewal_output.csv
output/low/run_0001/: renewal_output.csv
output/small/run_0000/: renewal_output.csv
output/small/run_0001/: renewal_output.csv
scripts/: tag.py
spec/: protocol.md
src/mrp/: __init__.py  __main__.py  api.py  cli.py  config.py  environment.py  model.py  orchestrator.py  runner_context.py  stager.py
src/mrp/runtime/: __init__.py  base.py  inline.py  subprocess.py
tests/: test_api.py  test_environment.py  test_fixtures.py  test_renewal.py  test_runner_context.py  test_runtime.py
tests/fixtures/: expected.json  expected.simple.json  input_params.json  mrp.toml  mrp.with_input_file.toml  mrp.with_profiles.toml
