[project]
name = "mrp"
version = "0.0.1"
description = "Model Run Protocol — orchestration SDK for computational disease models"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "rumdl>=0.1.18",
]

[project.scripts]
mrp = "mrp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mrp"]

[dependency-groups]
dev = ["poethepoet>=0.41.0", "pytest>=9.0.2", "ruff>=0.15.0", "ty>=0.0.15"]

[tool.poe.tasks]
lint_fix = "ruff check . --fix"
lint = "ruff check ."
format_check = "ruff format . --check"
check = ['lint', 'format_check']
test_unit = "pytest"
test_integration = "whatever"
test = ['test_unit']
format = "ruff format ."

typecheck = "ty check src"
mdlint = "rumdl check ."
mdfmt = "rumdl fmt ."
renewal = "mrp run examples/renewal/mrp.toml"

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
