[project]
name = "cfa-mrp"
version = "0.0.3"
description = "Model Run Protocol — orchestration SDK for computational disease models"
requires-python = ">=3.11"
dependencies = ["numpy>=2.4.2"]

[project.scripts]
mrp = "mrp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mrp"]

[dependency-groups]
dev = ["pytest>=9.0.2", "rumdl>=0.1.18", "ruff>=0.15.0", "ty>=0.0.15"]

[tool.uv.workspace]
members = ["examples/randomn", "examples/renewal"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
