[package]
name = "mrp"
description = "CFA Model Run Protocol sdk"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/CDCgov/cfa-mrp"
authors = ["k88hudson <k88hudson@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
