[project]
name = "renewal"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = ["cfa-mrp"]

[project.scripts]
renewal = "renewal.model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/renewal"]

[tool.uv.sources]
cfa-mrp = { workspace = true }
